@@ -13,6 +13,33 @@
 
 typedef struct _ViewDetailsClass ViewDetailsClass;
 
+typedef struct _ViewItem ViewItem;
+
+struct _ViewItem {
+	DirItem *item;
+	MaskedPixmap *image;
+	int	old_pos;	/* Used while sorting */
+	gboolean selected;
+	gchar   *utf8_name;	/* NULL => leafname is valid */
+};
+
+typedef struct _ViewDetails ViewDetails;
+
+struct _ViewDetails {
+	GtkTreeView treeview;
+
+	FilerWindow *filer_window;	/* Used for styles, etc */
+
+	GPtrArray   *items;		/* ViewItem */
+	
+	int	    (*sort_fn)(const void *, const void *);
+
+	int	    cursor_base;	/* Cursor when minibuffer opened */
+
+	GtkRequisition desired_size;
+};
+
+
 #define VIEW_DETAILS(obj) \
 	(GTK_CHECK_CAST((obj), view_details_get_type(), ViewDetails))
 
