@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+29-Dec-2002
+~~~~~~~~~~~
+Show thumbnails in List view. Allow changing the icon size. If the size is
+automatic, show thumbnails as Huge and everything else as Small.
+
 28-Dec-2002
 ~~~~~~~~~~~
 Use bold style to indicate recent items (instead of the pink background).
